change oh-my-zsh to zinit

--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,20 +1,25 @@
 #!/hint/bash
-#
-# /etc/makepkg.conf
-#
+# https://wiki.archlinux.org/title/Makepkg
 
 # Use all threads on compilation
 MAKEFLAGS="-j$(nproc)"
 
-# Paralelize download (needs aria2)
-DLAGENTS=('ftp::/usr/bin/aria2c %u -o %o --continue --max-connection-per-server=16 --min-split-size=1M --split=16'
-      'http::/usr/bin/aria2c %u -o %o --continue --max-connection-per-server=16 --min-split-size=1M --split=16'
-      'https::/usr/bin/aria2c %u -o %o --continue --max-connection-per-server=16 --min-split-size=1M --split=16'
+# Paralelize download (packages: aria2)
+DLAGENTS=('ftp::/usr/bin/aria2c %u -o %o --continue --max-connection-per-server=16 --min-split-size=1M --split=16 --console-log-level=warn'
+      'http::/usr/bin/aria2c %u -o %o --continue --max-connection-per-server=16 --min-split-size=1M --split=16 --console-log-level=warn'
+      'https::/usr/bin/aria2c %u -o %o --continue --max-connection-per-server=16 --min-split-size=1M --split=16 --console-log-level=warn'
       'rsync::/usr/bin/rsync --no-motd -z %u %o'
       'scp::/usr/bin/scp -C %u %o')
 
 
-# Use all cores on compressing (needs zstd, xz, pigz)
+# Use all cores on compressing (packages: zstd, xz, pigz)
 COMPRESSZST=(zstd -c -z -q --threads=0 -)
 COMPRESSXZ=(xz -c -z --threads=0 -)
 COMPRESSGZ=(pigz -c -f -n)
+
+# This only works for AMD 5000 series processors
+# See: https://wiki.gentoo.org/wiki/Safe_CFLAGS 
+COMMON_FLAGS="-O2 -march=znver3 -pipe"
+CFLAGS="${COMMON_FLAGS}"
+CXXFLAGS="${COMMON_FLAGS}"
+RUSTFLAGS="-C opt-level=2 -C target-cpu=native"
